# BetteRCon

./: .gitignore  Design.txt  LICENSE  README.md
BetteRCon/BetteRConFramework/: BetteRConFramework.vcxproj  BetteRConFramework.vcxproj.filters  CMakeLists.txt  build.sh
BetteRCon/BetteRConFramework/include/BetteRCon/: Server.h
BetteRCon/BetteRConFramework/include/BetteRCon/Internal/: Connection.h  ErrorCode.h  Packet.h
BetteRCon/BetteRConFramework/src/: Server.cpp
BetteRCon/BetteRConFramework/src/Internal/: Connection.cpp  ErrorCode.cpp  MD5.cpp  Packet.cpp
BetteRCon/BetteRConTestBench/: BetteRConTestBench.cpp  BetteRConTestBench.vcxproj  BetteRConTestBench.vcxproj.filters  CMakeLists.txt  build.sh
BetteRConFramework/: BetteRConFramework.sln
BetteRConFramework/BetteRConFramework/: BetteRConFramework.vcxproj  BetteRConFramework.vcxproj.filters  Design.txt
VS/: BetteRCon.sln
VS/Assist/: Assist.cpp  Assist.vcxproj  Assist.vcxproj.filters
VS/BetteRConConsole/: BetteRConConsole.vcxproj  BetteRConConsole.vcxproj.filters
VS/BetteRConFramework/: BetteRConFramework.vcxproj  BetteRConFramework.vcxproj.filters
VS/BetteRConSamplePlugin/: BetteRConSamplePlugin.vcxproj  BetteRConSamplePlugin.vcxproj.filters
VS/BetteRConTestBench/: BetteRConTestBench.vcxproj  BetteRConTestBench.vcxproj.filters
VS/FastRoundStart/: FastRoundStart.vcxproj  FastRoundStart.vcxproj.filters
VS/InGameAdmin/: InGameAdmin.cpp  InGameAdmin.filters  InGameAdmin.vcxproj  InGameAdmin.vcxproj.filters
VS/InGameCommands/: InGameCommands.cpp  InGameCommands.vcxproj  InGameCommands.vcxproj.filters
VS/InGameHelp/: InGameHelp.vcxproj
VS/VIPManager/: VIPManager.vcxproj  (+1 more)
linux/: buildAS.sh  buildAll.sh  buildBRC.sh  buildBRF.sh  buildBRSP.sh  buildBRT.sh  buildFRS.sh  buildIGA.sh  buildVIP.sh
src/: Assist.cpp  BetteRConConsole.cpp  BetteRConSamplePlugin.cpp  BetteRConTestBench.cpp  FastRoundStart.cpp  InGameAdmin.cpp  InGameCommands.cpp  Server.cpp  VIPManager.cpp
(+13 files in other folders)
